Java11 build support